<resources>
    <string name="app_name">PhotoEditor</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="registro">Registro</string>
    <string name="name">name</string>
    <string name="e_mail">e-mail</string>
    <string name="registrate">Registrate</string>
    <string name="photos">Photos</string>
    <string name="volver">volver</string>
    <string name="camara">Camara</string>
    <string name="premium">Premium</string>
    <string name="title_activity_permissions_display">PermissionsDisplayActivity</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="lista_de_usuarios_registrados">Lista de usuarios registrados</string>
</resources>
