<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#77CFE9"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:paddingTop="25dp"
    android:paddingRight="25dp"
    android:paddingBottom="25dp"
    tools:context="com.example.photoeditor.presentation.activities.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="25dp"
            android:paddingTop="25dp"
            android:paddingRight="25dp"
            android:paddingBottom="25dp"
            android:orientation="vertical">

    <TextView
        android:textColor="@android:color/background_dark"
        android:id="@+id/Registro"
        android:textSize="@android:dimen/app_icon_size"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50dp"
        android:text="@string/registro" />

    <EditText
        android:id="@+id/nameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName" tools:targetApi="o" />

    <EditText
        android:id="@+id/usernameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="username"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/emailRegister"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:background="@android:color/background_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" tools:targetApi="o" />

    <EditText
        android:id="@+id/passRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        tools:targetApi="o" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:onClick="RegisterButton"
        android:text="@string/registrate" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
