<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:actionBarNavMode="standard"
    tools:context=".presentation.activities.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="20dp"
        android:text="@string/photos"
        android:textSize="45sp"
        android:textStyle="bold" />

    <android.support.v7.widget.CardView
        android:layout_width="282dp"
        android:layout_height="376dp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/backgroundColor"
        app:cardCornerRadius="30dp">


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="469dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_launcher_foreground" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:hint="Username"
                android:singleLine="true"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/primaryTextColor"

                android:textColorHint="#3d4c4d" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="#3d4c4d" />

            <Button
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@drawable/roundbutton"
                android:backgroundTint="#E7E7E8"
                android:onClick="Login"
                android:text="Login" />

            <TextView
                android:id="@+id/registerOption"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="15dp"
                android:onClick="Register"
                android:text="@string/registrate"
                android:textAlignment="center"
                android:textColor="@color/primaryTextColor" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>

   
